# simple-dashboard

./: .env.example  CLAUDE.md  README.md  flake.nix  package.json
.direnv/: flake-profile-1-link  flake-profile-2-link
desktop/: index.html  package.json
desktop/scripts/: build-dmg.sh
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: config.rs  github.rs  lib.rs
desktop/src/components/: Dashboard.tsx  ErrorMessage.tsx  PatSetup.tsx  PrCard.tsx  PrSection.tsx
desktop/src/hooks/: use-dashboard-polling.ts  use-poll-interval.ts  use-view-mode.ts
desktop/src/lib/: types.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth-method/: route.ts
src/app/api/prs/: route.ts
src/components/: auth-method-select.tsx  dashboard-skeleton.tsx  dashboard.tsx  error-message.tsx  pr-card.tsx  pr-section.tsx  turn-badge.tsx  turn-debug-panel.tsx
src/hooks/: use-auth-method.ts  use-poll-interval.ts  use-polling.ts  use-view-mode.ts
src/lib/: github.ts  types.ts
