[package]
name = "desktop"
version = "0.1.0"
description = "GH Dash - GitHub PR Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
urlencoding = "2"
dirs = "6"
